--- a/app/components/agenda/agendaitem/agendaitem-controls.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-controls.hbs
@@ -1,5 +1,5 @@
-{{#if @currentAgenda.status.isDesignAgenda}}
-  {{#if (or this.isDeletable this.areDecisionActionsEnabled)}}
+{{#if this.hasDropdownOptions}}
+  {{#if (or this.isDeletable this.areDecisionActionsEnabled this.canSendToVP)}}
     <AuDropdown
       data-test-agendaitem-controls-actions={{true}}
       @skin="secondary"
@@ -7,7 +7,7 @@
       @alignment="right"
       class="auk-u-hidden@print"
     >
-      {{#if this.areDecisionActionsEnabled}}
+      {{#if (and this.areDecisionActionsEnabled this.isDesignAgenda)}}
         {{#if this.decisionActivity.isPostponed}}
           <AuButton
             data-test-agendaitem-controls-action-postpone-revert
@@ -43,7 +43,21 @@
           </AuButton>
         {{/if}}
       {{/if}}
-      {{#if (or this.currentSession.isAdmin (await this.isDeletable))}}
+      {{#if this.canSendToVP}}
+        <AuButton
+          @skin="link"
+          {{on "click" (set this "showVPModal" true)}}
+          role="menuitem"
+        >
+          {{t "send-to-VP"}}
+        </AuButton>
+      {{/if}}
+      {{#if
+        (and
+          (or this.currentSession.isAdmin (await this.isDeletable))
+          this.isDesignAgenda
+        )
+      }}
         <AuButton
           data-test-agendaitem-controls-action-delete
           @skin="link"
@@ -69,9 +83,19 @@
   @confirmIcon="trash"
   @alert={{true}}
 />
+{{#if this.showVPModal}}
+  <Agenda::Agendaitem::SendToVpModal
+    @onClose={{fn (set this "showVPModal" false)}}
+    @agendaitem={{@agendaitem}}
+    @definitieveGoedkeuringSubcase={{this.subcase}}
+  />
+{{/if}}
 {{#if this.setDecisionResultCode.isRunning}}
   <Auk::Modal @size="medium">
-    <Auk::Modal::Header @title={{t "saving-decision-result-title"}} @closeable={{false}} />
+    <Auk::Modal::Header
+      @title={{t "saving-decision-result-title"}}
+      @closeable={{false}}
+    />
     <Auk::Modal::Body>
       <Auk::Loader @message={{t "saving-decision-result-message"}} />
     </Auk::Modal::Body>
