chore: refactor Cases::NewCases to use AuModal

--- a/app/components/cases/cases-header.hbs
+++ b/app/components/cases/cases-header.hbs
@@ -23,16 +23,10 @@
       </Toolbar.Group>
     </Auk::Toolbar>
 </Auk::Navbar>
-<AuModal
-  @modalOpen={{this.isOpenNewCaseModal}}
-  @closeModal={{this.toggleIsOpenNewCaseModal}}
-  @title={{t "new-case"}}
-  @padding="none"
->
-  <:body>
-    <Cases::NewCase
-      @didSave={{this.saveNewCase}}
-      @onCancel={{this.toggleIsOpenNewCaseModal}}
-    />
-  </:body>
-</AuModal>
+
+{{#if this.isOpenNewCaseModal}}
+  <Cases::NewCase
+    @didSave={{this.saveNewCase}}
+    @onCancel={{this.toggleIsOpenNewCaseModal}}
+  />
+{{/if}}
