--- a/app/components/documents/linked-document-link.hbs
+++ b/app/components/documents/linked-document-link.hbs
@@ -34,14 +34,18 @@
           </Group.Item>
         </Toolbar.Group>
         <Toolbar.Group @position="right" as |Group|>
-          <Group.Item class="auk-o-flex">
+          <Group.Item
+            class="auk-o-flex auk-o-flex--vertical-center"
+          >
             {{#if this.lastPiece}}
               <AccessLevelPill
                 @accessLevel={{this.accessLevel}}
               />
             {{/if}}
           </Group.Item>
-          <Group.Item>
+          <Group.Item
+            class="auk-o-flex auk-o-flex--vertical-center"
+          >
             {{#if (user-may "manage-documents")}}
               <AuButton
                 @skin="naked"
