--- a/app/components/publications/documents/document-card-step.hbs
+++ b/app/components/publications/documents/document-card-step.hbs
@@ -25,7 +25,9 @@
             </Group.Item>
           </Toolbar.Group>
           <Toolbar.Group @position="right" as |Group|>
-            <Group.Item class="auk-o-flex">
+            <Group.Item
+              class="auk-o-flex auk-o-flex--vertical-center"
+            >
               {{#if (and @isEnabledDelete @piece.file)}}
                 <AuDropdown
                   @icon="three-dots"
@@ -47,13 +49,13 @@
           </Toolbar.Group>
           {{#if this.signaturesEnabled}}
             <Toolbar.Group @position="right" as |Group|>
-              <Group.Item class="auk-o-flex">
-                <Group.Item>
-                  <SignaturePill
-                    @piece={{@piece}}
-                    @signMarkingActivity={{this.signMarkingActivity}}
-                  />
-                </Group.Item>
+              <Group.Item
+                class="auk-o-flex auk-o-flex--vertical-center"
+              >
+                <SignaturePill
+                  @piece={{@piece}}
+                  @signMarkingActivity={{this.signMarkingActivity}}
+                />
               </Group.Item>
             </Toolbar.Group>
           {{/if}}
