add a popup to show minutes are loading

--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -135,3 +135,15 @@
     </div>
   </div>
 </div>
+
+{{#if this.isUpdatingMinutesContent}}
+  <Auk::Modal @size="small">
+    <Auk::Modal::Header
+      @title={{t "loading-minutes"}}
+      @closeable={{false}}
+    />
+    <Auk::Modal::Body>
+      <Auk::Loader @message={{t "loading-minutes"}} />
+    </Auk::Modal::Body>
+  </Auk::Modal>
+{{/if}}
