fix: correctly set disabled status of AuButton in Auk::Footer

--- a/app/components/auk/modal/footer.hbs
+++ b/app/components/auk/modal/footer.hbs
@@ -7,7 +7,7 @@
         <Auk::Toolbar::Item>
           <AuButton
             @skin="naked"
-            disabled={{@cancelDisabled}}
+            @disabled={{@cancelDisabled}}
             {{on "click" @onCancel}}
           >
             {{t "cancel"}}
