chore: make it possible to pass in data-test- selector to footer

--- a/app/components/auk/modal/footer.hbs
+++ b/app/components/auk/modal/footer.hbs
@@ -9,6 +9,7 @@
             @skin="naked"
             @disabled={{@cancelDisabled}}
             {{on "click" @onCancel}}
+            ...attributes
           >
             {{t "cancel"}}
           </AuButton>
