chore: rename isReportOrMinutes argument of Signatres::CreateSignFlow
Minutes is always plural.

--- a/app/components/signatures/create-sign-flow.hbs
+++ b/app/components/signatures/create-sign-flow.hbs
@@ -1,4 +1,4 @@
-{{#if @isReportOrMinute}}
+{{#if @isReportOrMinutes}}
   <Signatures::CreateSignFlow::ReportOrMinutes
     @decisionActivities={{@decisionActivities}}
     @onChangeSigners={{@onChangeSigners}}
