feat: make DocumentCard deal with the meeting for signing purposes
For minutes and reports, we pass in a meeting that is used when marking
a piece for signing. The logic on when to show the "mark for signing"
button is also updated to deal with the absence of the
"is-report-or-minutes" attribute.

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -49,6 +49,7 @@
         <Documents::DocumentCard
           @piece={{this.report}}
           @decisionActivity={{@decisionActivity}}
+          @meeting={{@agendaContext.meeting}}
           @isEditable={{true}}
           @agendaContext={{@agendaContext}}
           @hideNewerVersions={{true}}
@@ -184,6 +185,7 @@
           <Documents::DocumentCard
             @piece={{this.report}}
             @decisionActivity={{@decisionActivity}}
+            @meeting={{@agendaContent.meeting}}
             @isEditable={{true}}
             @agendaContext={{@agendaContext}}
             @hideNewerVersions={{true}}
