--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -98,6 +98,7 @@
                 @onCreateNewVersion={{perform this.onCreateNewVersion}}
                 @bordered={{true}}
                 @didDeleteContainer={{this.didDeleteMinutes}}
+                @meeting={{this.meeting}}
               />
             {{else if (user-may "manage-minutes")}}
               <AuAlert
