fix: use correct syntax to pass onCancel to modal footer

--- a/app/components/signatures/email-modal.hbs
+++ b/app/components/signatures/email-modal.hbs
@@ -18,7 +18,7 @@
       </AuFormRow>
     </div>
   </Auk::Modal::Body>
-  <Auk::Modal::Footer onCancel={{@onCancel}}>
+  <Auk::Modal::Footer @onCancel={{@onCancel}}>
       <AuButton
         data-test-signatures-create-email-add
         @disabled={{not this.isValid}}
