add (not functional) code to update UI

--- a/app/components/agenda/agendaitem/agendaitem-controls.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-controls.hbs
@@ -85,7 +85,7 @@
 />
 {{#if this.showVPModal}}
   <Agenda::Agendaitem::SendToVpModal
-    @onClose={{fn (set this "showVPModal" false)}}
+    @onClose={{this.onSendToVp}}
     @agendaitem={{@agendaitem}}
     @definitieveGoedkeuringSubcase={{this.subcase}}
   />
