--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -531,4 +531,85 @@ $au-label-color: var(--au-gray-700);
   ol.au-c-list li + li {
     margin-top: 0;
   }
+
+  // Provides the general styling for the decimal-extended (multi-level) list type
+  // NOTE: This is limited to a certain levels deep because otherwise the styling keep overriding each other (`[data-list-style='decimal-extended']` and the rest of the ol/ul selectors)
+  @mixin decimal-extended-styling($levels, $current-level: 1) {
+    display: table;
+    list-style-type: none;
+    margin: 0;
+    counter-reset: item;
+
+    > li {
+      display: table-row;
+      counter-increment: item;
+
+      &:before {
+        display: table-cell;
+        min-width: 2.4rem;
+        padding-right: .5ch;
+        text-align: end;
+        content: counters(item, ".") ". ";
+      }
+
+      @if $current-level < $levels {
+        > ol:not([data-list-style]) {
+          @include decimal-extended-styling($levels, $current-level + 1);
+        }
+      }
+
+      @if $current-level == $levels {
+        > ol:not([data-list-style]) {
+          list-style-type: decimal;
+
+          ol:not([data-list-style]) {
+            list-style-type: inherit;
+          }
+        }
+      }
+    }
+  }
+
+  ol[data-list-style='decimal-extended'] {
+    @include decimal-extended-styling(5, 1);
+
+    ol[data-list-style='decimal-extended'] {
+      &,
+      ol {
+        display: block !important;
+        margin-left: 2.4rem !important;
+        counter-reset: none !important;
+
+        li {
+          display: list-item !important;
+          counter-increment: none !important;
+
+          &:before{
+            display: inline !important;
+            content: none !important;
+          }
+        }
+      }
+
+      &[data-list-style='decimal-extended'] {
+        list-style-type: decimal !important;
+      }
+
+      & > li > ol:not([data-list-style]) {
+        list-style-type: inherit !important;
+      }
+
+      &[data-list-style='decimal'] {
+        list-style-type: decimal !important;
+      }
+
+      &[data-list-style='upper-roman'] {
+        list-style-type: upper-roman !important;
+      }
+
+      &[data-list-style='lower-alpha'] {
+        list-style-type: lower-alpha !important;
+      }
+    }
+  }
 }
