--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -216,7 +216,7 @@
           class="au-o-flow {{if this.isEditing 'au-u-background-gray-100'}}"
         >
           <AuContent @size="small">
-        {{#if (and this.isEditingAnnotation this.enableDigitalAgenda)}}
+        {{#if (and this.isEditingAnnotation this.mayEditDecisionReport)}}
            <h4 class="auk-h4">{{t "annotation"}}</h4>
            <AuInput
              @width="block"
@@ -261,7 +261,7 @@
                      (user-may "manage-decisions")
                      (not this.isEditingAnnotation)
                      (or this.pieceParts (not this.report))
-                     this.enableDigitalAgenda
+                     this.mayEditDecisionReport
                    )
                  }}
                    <Group.Item>
@@ -283,7 +283,7 @@
            @value={{this.annotatiePiecePart.htmlContent}}
          />
         {{/if}}
-        {{#if (and this.isEditingConcern this.enableDigitalAgenda)}}
+        {{#if (and this.isEditingConcern this.mayEditDecisionReport)}}
            <h4 class="auk-h4">{{t "concerns"}}</h4>
         <SayEditor
           @size="small"
@@ -345,7 +345,7 @@
                         (user-may "manage-decisions")
                         (not this.isEditingConcern)
                         (or this.pieceParts (not this.report))
-                        this.enableDigitalAgenda
+                        this.mayEditDecisionReport
                       )
                     }}
                       <Group.Item>
@@ -368,7 +368,7 @@
               @value={{this.betreftPiecePart.htmlContent}}
             />
             {{/if}}
-             {{#if (and this.isEditingTreatment this.enableDigitalAgenda)}}
+             {{#if (and this.isEditingTreatment this.mayEditDecisionReport)}}
               <h4 class="auk-h4 au-u-padding-top">{{t "agendaitem-decision"}}</h4>
               <SayEditor
                 @allowFullscreen={{true}}
@@ -430,7 +430,7 @@
                         (user-may "manage-decisions")
                         (not this.isEditingTreatment)
                         (or this.pieceParts (not this.report))
-                        this.enableDigitalAgenda
+                        this.mayEditDecisionReport
                       )
                     }}
                       <Group.Item>
