--- a/app/components/utils/toaster/copy-error-to-clipboard-toast.hbs
+++ b/app/components/utils/toaster/copy-error-to-clipboard-toast.hbs
@@ -6,7 +6,7 @@
 >
   <div class="auk-u-text-capitalize">
     <p>{{@options.message}}</p>
-    <div class="au-u-margin-top-small au-o-box--small au-u-background-gray-100">
+    <div class="au-u-margin-top-small au-o-box--small au-u-background-gray-100 au-u-word-break">
       <Utils::ClipboardableContent @content={{@options.errorContent}} />
     </div>
   </div>
