KAS-4382 Switch toaster alert to small size

--- a/app/components/utils/toaster/copy-error-to-clipboard-toast.hbs
+++ b/app/components/utils/toaster/copy-error-to-clipboard-toast.hbs
@@ -2,6 +2,7 @@
   @title={{@options.title}}
   @skin="error"
   @icon="alert-triangle"
+  @size="small"
   @closable={{true}}
 >
   <div class="auk-u-text-capitalize">
