KAS-4378 Fixed culprit of faulty collapsing width of checkbox tree items

--- a/app/components/auk/checkbox-tree.hbs
+++ b/app/components/auk/checkbox-tree.hbs
@@ -1,4 +1,4 @@
-<AuCheckboxGroup> {{!-- Just use the group component here as a styling method as also using the included functionality would unnecessarily overcomplicate things --}}
+<AuCheckboxGroup class="auk-u-maximize-width"> {{!-- Just use the group component here as a styling method as also using the included functionality would unnecessarily overcomplicate things --}}
   <AuCheckbox
     @checked={{this.isSelectedAllItems}}
     @indeterminate={{and (not this.isSelectedAllItems) this.isSelectedSomeItems}}
