--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -19,6 +19,7 @@
                       @skin="naked"
                       @icon="pencil"
                       @iconAlignment="left"
+                      @disabled={{this.currentPiecePartTask.isRunning}}
                       {{on "click" (fn (set this "isEditing" true))}}
                     >
                       {{t (if @model.minutes "edit" "create")}}
