--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -59,6 +59,7 @@
           @onCreateNewVersion={{perform this.onCreateNewVersion}}
           @bordered={{true}}
           @didDeleteContainer={{this.didDeleteReport}}
+          @didSaveAccessLevel={{this.didSaveAccessLevel}}
         />
       {{else}}
         <Auk::Loader />
