KAS-4394 change confidentiality check in the document card triggers report creation

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -59,7 +59,7 @@
           @onCreateNewVersion={{perform this.onCreateNewVersion}}
           @bordered={{true}}
           @didDeleteContainer={{this.didDeleteReport}}
-          @didSaveAccessLevel={{this.didSaveAccessLevel}}
+          @onChangeConfidentiality={{this.generateNewReport}}
         />
       {{else}}
         <Auk::Loader />
