--- a/app/components/agenda/agenda-header/agenda-actions.hbs
+++ b/app/components/agenda/agenda-header/agenda-actions.hbs
@@ -74,7 +74,7 @@
       {{t "edit-meeting"}}
     </AuButton>
   {{/if}}
-  {{#if (user-may "manage-decisions")}}
+  {{#if (and (not @meeting.isPreDigitalDecisions) (user-may "manage-decisions"))}}
     <AuHr />
     <AuButton
       @skin="link"
