KAS-4410 Add css property to enable equal character width/space for outline list numbering

--- a/app/styles/addon-overrides/_ember-rdfa-editor.scss
+++ b/app/styles/addon-overrides/_ember-rdfa-editor.scss
@@ -141,6 +141,8 @@ $say-editor-border-radius: $au-input-border-radius;
         } @else {
           min-width: 3.8rem;
         }
+
+        font-variant-numeric: tabular-nums;
       }
 
       @if $current-level < $levels {
