KAS-4381 Fix display width issue of datepicker inputs

--- a/app/templates/publications/overview/search.hbs
+++ b/app/templates/publications/overview/search.hbs
@@ -44,6 +44,7 @@
           @onChange={{set this "dateFromBuffer"}}
           @enableClear={{this.dateFromBuffer}}
           @onClear={{set this "dateFromBuffer" undefined}}
+          class="auk-u-maximize-width"
         />
       </AuFormRow>
       <AuFormRow class="au-u-margin-top-none au-u-1-6" data-test-route-search-date-to>
@@ -53,6 +54,7 @@
           @onChange={{set this "dateToBuffer"}}
           @enableClear={{this.dateToBuffer}}
           @onClear={{set this "dateToBuffer" undefined}}
+          class="auk-u-maximize-width"
         />
       </AuFormRow>
       <AuFormRow class="au-u-margin-top-none au-u-1-6">
