--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -516,6 +516,10 @@ $au-label-color: var(--au-gray-700);
     list-style: decimal;
     margin-left: $au-unit;
 
+    & > li > ol:not([data-list-style]) {
+      list-style-type: inherit;
+    }
+
     &[data-list-style='decimal'] {
       list-style-type: decimal;
     }
