--- a/app/components/signature-pill.hbs
+++ b/app/components/signature-pill.hbs
@@ -15,7 +15,8 @@
       @icon="sign" 
       @skin={{this.skin}}
       @route={{if (and this.isClickable this.data.value.route) this.data.value.route}}
-      >
+      @models={{if (and this.isClickable this.data.value.models) this.data.value.models}}
+    >
       {{this.data.value.status.label}}
     </AuPill>
   {{/if}}
