--- a/app/components/documents/document-details-panel.hbs
+++ b/app/components/documents/document-details-panel.hbs
@@ -178,7 +178,7 @@
           {{@piece.name}}
         {{/if}}
       </Auk::KeyValue>
-      {{#if (and this.isSignaturesEnabled (await (this.canViewSignedPiece)))}}
+      {{#if (and this.isSignaturesEnabled (user-may "manage-signatures") (await (this.canViewSignedPiece)))}}
         {{#if @piece.signedPiece.file}}
           <div class="auk-key-value-item">
             <div class="auk-key-value-item__label">{{t "signed-document"}}</div>
